ANALYZE button displays canvas content

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,7 +65,7 @@ video {
   right: 10px;
 }
 
-.controls > button {
+button {
   text-align: center;
   margin: 1%;
 }
@@ -83,11 +83,16 @@ video {
 }
 
 .screenshot-image {
-  width: 150px;
-  height: 90px;
+  width: 640px;
+  height: 360px;
   border-radius: 4px;
   border: 2px solid whitesmoke;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+}
+
+.screenshot-output {
+  width: 640px;
+  height: 360px;
 }
 
 footer {
