--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -82,13 +82,13 @@ button {
   position: absolute;
 }
 
-.screenshot-image {
+/*.screenshot-image {
   width: 640px;
   height: 360px;
   border-radius: 4px;
   border: 2px solid whitesmoke;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
-}
+}*/
 
 footer {
   background-color: #f5f5f5;
