--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -90,6 +90,11 @@ button {
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
 }*/
 
+.output {
+  width: 60px;
+  height: 60px;
+}
+
 footer {
   background-color: #f5f5f5;
   display: flex;
