--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,18 +1,3 @@
-@font-face {
-  font-family: "cabinregular";
-  src: url("fonts/webfont-cabin.woff2") format("woff2"),
-    url("fonts/webfont-cabin.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "liu_jian_mao_caoregular";
-  src: url("fonts/webfont-liujianmaocao.woff2") format("woff2"),
-    url("fonts/webfont-liujianmaocao.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-
 header {
   display: flex;
   justify-content: center;
@@ -31,8 +16,6 @@ header {
   max-width: 300px;
   height: auto;
 }
-
-/*background-color: ; #b5829a #dac20b*/
 
 .display-cover {
   display: flex;
@@ -70,11 +53,6 @@ button {
   margin: 1%;
 }
 
-/*Turn this on if you switch from buttons to icons*/
-/*.controls > button:hover {
-  color: white !important;
-}*/
-
 .outline {
   display: flex;
   text-align: center;
@@ -82,15 +60,16 @@ button {
   position: absolute;
 }
 
-/*.screenshot-image {
+.display-image {
+  text-align: center;
   width: 640px;
   height: 360px;
   border-radius: 4px;
   border: 2px solid whitesmoke;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1);
-}*/
+}
 
-.output {
+.result {
   width: 60px;
   height: 60px;
 }
@@ -101,6 +80,29 @@ footer {
   justify-content: center;
   align-items: center;
 }
+
+/*Turn this on if you switch from buttons to icons*/
+/*.controls > button:hover {
+  color: white !important;
+}*/
+
+/*background-color: ; #b5829a #dac20b*/
+
+/*@font-face {
+  font-family: "cabinregular";
+  src: url("fonts/webfont-cabin.woff2") format("woff2"),
+    url("fonts/webfont-cabin.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "liu_jian_mao_caoregular";
+  src: url("fonts/webfont-liujianmaocao.woff2") format("woff2"),
+    url("fonts/webfont-liujianmaocao.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+*/
 
 /*
 @media (min-width: 300px) and (max-width: 400px) {
