added instructions for taking picture

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,6 +53,11 @@ a:hover {
   height: auto;
 }
 
+.row.tips {
+  display: flex;
+  justify-content: center;
+}
+
 .display-cover {
   display: flex;
   justify-content: center;
